--- a/style.css
+++ b/style.css
@@ -113,3 +113,11 @@ footer {
     object-fit: cover;
     border-radius: 10px;
 }
+
+a{
+    text-decoration: none;
+    color: white;
+}
+a:hover{
+    text-decoration: underline;
+}
